Fix:added padding to stop navbar overlap

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -45,8 +45,8 @@ h2 {
 }
 
 .section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    /* Prevent navbar overlap */
+    padding-top: 4.3rem; 
 }
 
 /* Buttons */
@@ -142,19 +142,9 @@ h2 {
 
 /* Game reservation form */
 
-#game-reservation-form input {
-    
-}
 #booking-form #booking-form-submit {
     float:right;
 }
-/* #booking-form #date {
-    width:33.333333%
-}
-section #gameselectinput {
-    width: 60.666666667%;
-    display:inline;
-} */
 
 /* Footer / Contact */
 
